Fixed alignment issues with the main picture in home page

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -28,7 +28,7 @@
     	background-image: url("../images/background.png");
     	background-position: center;
     	background-repeat: no-repeat;
-    	
+    	background-size:100%;
     }
 
     .container {
@@ -54,7 +54,7 @@
     /* Set gray background color and 100% height */
     .sidenav {
       padding-top: 0px;
-      padding-left: 0px;
+      padding-left: 10px;
       padding-right: 0px;
       background-color: #f1f1f1;
       height:100%;
